--- a/WebFont/FontCSS/FWWC2023.css
+++ b/WebFont/FontCSS/FWWC2023.css
@@ -1,1 +1,8 @@
-
+/* Srabondhara Font Face */
+@font-face {
+  font-family: "FN Srabondhara Unicode";
+  font-style: normal;
+  font-weight: 500;
+  font-display: swap;
+  src: url(../WebFont/Fonts/FN Srabondhara Unicode.woff) format("woff");
+}
